fixed alignment of new task div

--- a/src/style.css
+++ b/src/style.css
@@ -165,7 +165,7 @@ h1 {
   display: none;
   position: fixed;
   bottom: 0;
-  right: 15px;
+  right: 10px;
   border: 3px solid #f1f1f1;
   z-index: 9;
 }
